sliders and contact

--- a/UskudarDenetim.UI/Views/PracticalInformations/_PracticalInformations.cshtml
+++ b/UskudarDenetim.UI/Views/PracticalInformations/_PracticalInformations.cshtml
@@ -31,7 +31,7 @@
 
         <div class="column dt-sc-one-fourth">
             <div class="hr-title">
-                <h3>Üstad</h3>
+                <h3>Yeminli Mali Müşavir </h3>
                 <div class="title-sep">
                 </div>
             </div>
