--- a/UskudarDenetim.UI/Views/Shared/_Banner.cshtml
+++ b/UskudarDenetim.UI/Views/Shared/_Banner.cshtml
@@ -6,7 +6,7 @@
             </div>
             <div class="ls-l" style="top:124px;left:778px;white-space: nowrap;" data-ls="offsetxin:0;offsetyin:100;delayin:1000;">
             </div>
-            <div class="ls-l" style="top:300px;left:1030px;font-weight:300; text-transform: uppercase; text-align: right;font-family:'Lato';font-size:18px;color:#ffffff;white-space: nowrap;" data-ls="delayin:2200;">
+            @*<div class="ls-l" style="top:300px;left:1030px;font-weight:300; text-transform: uppercase; text-align: right;font-family:'Lato';font-size:18px;color:#ffffff;white-space: nowrap;" data-ls="delayin:2200;">
                 <span style="color:#478bca; font-weight:700;">Church </span> 
             </div>
             <div class="ls-l" style="top:330px;left:1035px;font-weight:300; text-transform: uppercase; text-align: right;font-family:'Lato';font-size:18px;color:#ffffff;white-space: nowrap;" data-ls="delayin:2400;">
@@ -20,7 +20,7 @@
             </div>
             <div class="ls-l" style="top:420px;left:1040px;font-weight:300; text-transform: uppercase; text-align: right;font-family:'Lato';font-size:18px;color:#ffffff;white-space: nowrap;" data-ls="delayin:3000;">
                 <span style="color:#478bca; font-weight:700;">Travel </span> 
-            </div>
+            </div>*@
         </div>
         @*<div class="ls-slide" data-ls="slidedelay:10000;transition2d:4;">
                 <img src="../Images/sliders/blank.gif" data-src="http://placehold.it/1920x645&text=Slider" class="ls-bg" alt="fitness-bg" />
