--- a/UskudarDenetim.UI/Views/TeamMember/Index.cshtml
+++ b/UskudarDenetim.UI/Views/TeamMember/Index.cshtml
@@ -3,7 +3,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <h2 class="aligncenter">Ekip Yapısı</h2>
-<div class="full-width-section">
+<div class="full-width-section" style="margin-bottom:150px">
     <div class="container">
         @*<p class="middle-align">Çalışma Arkadaşlarımız<br /> Latin literature from 45 BC, making it over 2000 years old. </p>*@
         <div class="dt-sc-hr-invisible-small"></div>
@@ -23,7 +23,7 @@
                             <div class="dt-sc-hr-invisible"></div>
                             <!-- **dt-sc-team - Starts** -->
                             <div class="dt-sc-team type4">
-                                <div class="image"><img src="~/Images/160x160/amspf.jpg" alt="iamge" /></div>
+                                <div class="image"><img src="~/Images/160x160/ufukpf.png" alt="iamge" /></div>
                                 <!-- **team-details - Starts** -->
                                 <div class="team-details">
                                     <h6><a href="#">@employee.FirstName @employee.LastName</a></h6>
