--- a/UskudarDenetim.UI/Views/Home/Contact.cshtml
+++ b/UskudarDenetim.UI/Views/Home/Contact.cshtml
@@ -22,8 +22,9 @@
                 <div class="dt-sc-margin15"></div>
                 <!-- **dt-sc-contact-info - Starts** -->
                 <div class="dt-sc-contact-info">
-                    <p> <i class="fa fa-location-arrow"></i>@Model.Address.AddressDetail<br /> 
+                    <p> <i class="fa fa-location-arrow"></i>@Model.Address.AddressDetail<br />
                     <p> <i class="fa fa-phone"></i> @Model.PhoneNumber </p>
+                    <p> <i class="fa fa-phone"></i> @Model.FaxNumber </p>
                     <i class="fa fa-envelope"></i><a href="mailto:@(Model.EmailAddress)" target="_top">@Model.EmailAddress</a>
                 </div> <!-- **dt-sc-contact-info - Ends** -->
             </div>
