--- a/UskudarDenetim.UI/Views/Shared/_Banner.cshtml
+++ b/UskudarDenetim.UI/Views/Shared/_Banner.cshtml
@@ -1,7 +1,7 @@
 ﻿<div class="banner">
     <div id="layerslider_11" class="ls-wp-container" style="width:100%;height:645px;max-width:1920px;margin:0 auto;margin-bottom: 0px;">
         <div class="ls-slide" data-ls="slidedelay:10000;transition2d:4;">
-            <img src="../Images/kızkulesi/15.png" class="ls-bg" alt="attorney-bg" />
+            <img src="Images/kızkulesi/15.png" class="ls-bg" alt="attorney-bg" />
             <div class="ls-l" style="top:270px;left:1013px;font-weight:300; text-transform: uppercase; text-align: right;;font-size:18px;color:#ffffff;white-space: nowrap;" data-ls="delayin:4500;">
             </div>
             <div class="ls-l" style="top:124px;left:778px;white-space: nowrap;" data-ls="offsetxin:0;offsetyin:100;delayin:1000;">
