--- a/UskudarDenetim.UI/Views/Shared/_Employees.cshtml
+++ b/UskudarDenetim.UI/Views/Shared/_Employees.cshtml
@@ -23,7 +23,7 @@
                                 <div class="dt-sc-hr-invisible"></div>
                                 <!-- **dt-sc-team - Starts** -->
                                 <div class="dt-sc-team type4">
-                                    <div class="image"><img src="~/Images/160x160/ufukpf.png" alt="iamge" /></div>
+                                    <div class="image"><img src="@employee.ImgSrc" alt="iamge" /></div>
                                     <!-- **team-details - Starts** -->
                                     <div class="team-details">
                                         <h6><a href="#">@employee.FirstName @employee.LastName</a></h6>
@@ -41,7 +41,7 @@
                             <div class="column dt-sc-one-half first">
                                 <!-- **dt-sc-team - Starts** -->
                                 <div class="dt-sc-team type4">
-                                    <div class="image"><img src="~/Images/160x160/ufukpf.png" alt="iamge" /></div>
+                                    <div class="image"><img src="@employee.ImgSrc" alt="iamge" /></div>
                                     <!-- **team-details - Starts** -->
                                     <div class="team-details">
                                         <h6><a href="#">@employee.FirstName @employee.LastName</a></h6>
