--- a/UskudarDenetim.UI/Views/Service/_WhatWeDo.cshtml
+++ b/UskudarDenetim.UI/Views/Service/_WhatWeDo.cshtml
@@ -9,7 +9,7 @@
         -moz-box-shadow: 0px 0px 25px 6px rgba(22,69,110,0.59);
         box-shadow: 0px 0px 25px 6px rgba(22,69,110,0.59);
     }        
-        </style>>
+        </style>
 <div class="parallax full-width-section pattern-bg ">
     <div class="dt-sc-margin65"></div>
     <div class="container">
