--- a/UskudarDenetim.UI/Views/Service/Detail.cshtml
+++ b/UskudarDenetim.UI/Views/Service/Detail.cshtml
@@ -1,6 +1,6 @@
-﻿@model UskudarDenetim.UI.Models.ModelCircular
+﻿@model UskudarDenetim.UI.Models.ModelService
 @{
-    ViewBag.Title = "Sirkü Detayı";
+    ViewBag.Title = "Hizmet Detayı";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -8,7 +8,7 @@
     <div class="parallax full-width-bg">
         <div class="container">
             <div class="main-title">
-                <h1>@Model.Header</h1>
+                <h1>@Model.Name</h1>
             </div>
         </div>
     </div>
