--- a/UskudarDenetim.UI/Views/Service/ServiceDetail.cshtml
+++ b/UskudarDenetim.UI/Views/Service/ServiceDetail.cshtml
@@ -7,7 +7,7 @@
     <div class="parallax full-width-bg">
         <div class="container">
             <div class="main-title">
-                <h1>Hizmetlerimiz</h1>
+                <h1>@Model.Name</h1>
             </div>
         </div>
     </div>
@@ -23,9 +23,9 @@
          
                 <!-- **entry-detail - Starts** -->
                 <div class="entry-detail">
-                    <div class="entry-title">
+                    @*<div class="entry-title">
                         <h4><a href="#">@Model.Name</a></h4>
-                    </div>
+                    </div>*@
             
                     <div class="entry-body">
                         <p> @Model.Description</p>
