--- a/UskudarDenetim.UI/Views/Shared/_AdminHeader.cshtml
+++ b/UskudarDenetim.UI/Views/Shared/_AdminHeader.cshtml
@@ -17,21 +17,23 @@
 
                         </li>
                         <li class="menu-item-simple-parent">
-                            <a href="@Url.Action("UpdateContact","Admin")">İletişim</a>
+                            <a href="@Url.Action("Services","Service")">Hizmetler</a>
                             <a class="dt-menu-expand">+</a>
                         </li>
-                        <li class="menu-item-simple-parent">
+                        <li class="menu-item-simple-parent mce_backcolor">
                             <a href="@Url.Action("Employees","Admin")">Çalışanlar</a>
                             <a class="dt-menu-expand">+</a>
                         </li>
+                        @*<li class="menu-item-simple-parent">
+                            <a href="@Url.Action("UpdateContact","Admin")">İletişim</a>
+                            <a class="dt-menu-expand">+</a>
+                        </li>
+
                         <li class="menu-item-simple-parent">
                             <a href="@Url.Action("ActivityAreas","ActivityArea")">Faailiyet alanları</a>
                             <a class="dt-menu-expand">+</a>
                         </li>
-                        <li class="menu-item-simple-parent">
-                            <a href="@Url.Action("Services","Service")">Hizmetler</a>
-                            <a class="dt-menu-expand">+</a>
-                        </li>
+
                         <li class="menu-item-simple-parent">
                             <a href="@Url.Action("GetAllApplyFrom","HR")">IK</a>
                             <a class="dt-menu-expand">+</a>
@@ -43,7 +45,7 @@
                         <li class="menu-item-simple-parent">
                             <a href="@Url.Action("PracticalInformations","PracticalInformations")">Faydalı Bilgiler</a>
                             <a class="dt-menu-expand">+</a>
-                        </li>
+                        </li>*@
 
                     </ul>
                 </nav>
