--- a/UskudarDenetim.UI/Views/Shared/_Header.cshtml
+++ b/UskudarDenetim.UI/Views/Shared/_Header.cshtml
@@ -19,8 +19,8 @@
             <a href="@Url.Action("Index","TeamMember")">Ekip Yapısı</a>
             <a class="dt-menu-expand">+</a>
         </li>*@
-                        <li class="menu-item-simple-parent @(ViewContext.RouteData.Values["action"].ToString().Equals("ServiceDetail")? "current_page_item":"") ">
-                            <a href="#">Hizmetlerimiz</a>
+                        <li class="menu-item-simple-parent @(ViewContext.RouteData.Values["action"].ToString().Equals("ServiceDetail")? "current_page_item":"") @(ViewContext.RouteData.Values["controller"].ToString().Equals("Service")? "current_page_item":"") ">
+                            <a href="@Url.Action("Index", "Service")">Hizmetlerimiz</a>
                             <ul class="sub-menu ">
                                 <li><a href="@Url.Action("ServiceDetail", "Service",new {id="02a36bb3-ceba-4a53-b16b-40c07c32718a" })">Kdv İadesi</a></li>
                                 <li><a href="@Url.Action("ServiceDetail", "Service",new {id="6546f444-0034-4772-861f-d4eeac51faad" })">Tam Tasdik</a></li>
