--- a/UskudarDenetim.UI/Views/Shared/_ReachUS.cshtml
+++ b/UskudarDenetim.UI/Views/Shared/_ReachUS.cshtml
@@ -1,5 +1,5 @@
 ﻿@model UskudarDenetim.UI.Models.ModelContact
-<div class="parallax full-width-section parallax-bg">
+<div class="parallax full-width-section pattern-bg">
     <div class="container">
         <div class="column dt-sc-one-half first">
         </div>
