--- a/UskudarDenetim.UI/Views/Admin/Employee.cshtml
+++ b/UskudarDenetim.UI/Views/Admin/Employee.cshtml
@@ -18,6 +18,11 @@
                 @Html.HiddenFor(Model => Model.Id)
                 @Html.HiddenFor(Model => Model.DocumentId)
                 <h4>Kişi Bilgileri</h4>
+                <p class="dt-sc-one-column">
+                    <div class="image"><img src="@Model.ImgSrc" alt="iamge" /></div>
+                </p>
+
+
                 <p class="dt-sc-one-half column first">
                     @Html.TextBoxFor(x => x.FirstName, new { @placeholder = "Adı Giriniz", @required = "required" })
                 </p>
@@ -41,10 +46,10 @@
                 </p>
 
                 <p class="dt-sc-one-half column first">
-                    @Html.TextBoxFor(x => x.BirthDate, new { @placeholder = "E-Posta Adresini Giriniz", @required = "required", @type = "date", @class = "form-control" })
+                    @Html.TextBoxFor(x => x.Order, new { @placeholder = "Öncelik Sırasını Giriniz", @required = "required", @type = "text", @class = "form-control" })
                 </p>
                 <p class="dt-sc-one-half column mt-10">
-                    @Html.TextBoxFor(x => x.File, new { @type = "file", @name = "file", accept = "image/png, image/jpeg, image/gif", @class = "form-control", required = "required" })
+                    @Html.TextBoxFor(x => x.File, new { @type = "file", @name = "file", accept = "image/png, image/jpeg, image/gif", @class = "form-control"})
 
                 </p>
 
