--- a/UskudarDenetim.UI/Views/Home/Index.cshtml
+++ b/UskudarDenetim.UI/Views/Home/Index.cshtml
@@ -3,14 +3,14 @@
 }
 
 @Html.Partial("_Banner")
-
-@Html.Action("GetActivityAreas", "ActivityArea")
 @Html.Action("GetServices", "Service")
+@Html.Action("GetActivityAreas", "ActivityArea")
+@Html.Action("GetCircular", "Circular")
 @Html.Action("_PracticalInformations", "PracticalInformations")
 
 
 @Html.Action("AllEmployee", "Admin")
-<div class="dt-sc-margin100"></div>
+<div class="dt-sc-margin100" style="margin-top:140px;"></div>
 @Html.Partial("_ReachUS", new UskudarDenetim.UI.Models.ModelContact())
 <div class="dt-sc-margin100"></div>
 <!-- Container starts-->
