--- a/UskudarDenetim.UI/Views/Service/Services.cshtml
+++ b/UskudarDenetim.UI/Views/Service/Services.cshtml
@@ -15,7 +15,7 @@
                             <th scope="col">#</th>
                             <th scope="col">Hizmet Adı</th>
                             <th scope="col">Açıklama</th>
-                            <th scope="col"> <input type="button" value="Yeni Kayıt" onclick="CreateService()" class="dt-sc-button float-inherit" /></th>
+                            <th scope="col"> <input type="button" value="Yeni Kayıt" onclick="location.href = '@Url.Action("Create","Service")';" class="dt-sc-button float-inherit" /></th>
                         </tr>
                     </thead>
                     <tbody>
@@ -27,9 +27,9 @@
                             <tr>
                                 <th scope="row">@Html.Raw(++count)</th>
                                 <td>@service.Name</td>
-                                <td>  <input type="button" style="background-color:red !important" value="Sil" onclick="deleteService('@service.Id)')" class="dt-sc-button float-inherit" /></td>
+                                <td>  <input type="button" style="background-color:red !important" value="Sil" onclick="deleteService('@service.Id')" class="dt-sc-button float-inherit" /></td>
                                 <td>
-                                    <input type="button" value="Düzenle" onclick="openUpdateServiceModal('@Html.Raw(Model)')" class="dt-sc-button float-inherit" />
+                                    <input type="button" value="Düzenle" onclick="location.href = '@Url.Action("Update","Service",new {id=service.Id })';" class="dt-sc-button float-inherit" />
                                 </td>
                             </tr>
                         }
@@ -39,28 +39,10 @@
         </div>
     </div>
 </div>
-@Html.Partial("ServiceModal", new UskudarDenetim.UI.Models.ModelService())
 @section scripts{
 
     <script type="text/javascript">
-        function openUpdateServiceModal(model) {
-            debugger;
-            $('#Id').text(model.Id)
-            $('#Name').val(model.Name);
-            $('#Description').val(model.Description);
-            $('#IconClassName').val(model.IconClassName);
 
-            $('#ServiceModal').modal();
-        }
-        function CreateService() {
-            debugger;
-            $('#Id').text('');
-            $('#Name').val('');
-            $('#Description').val('');
-            $('#IconClassName').val('');
-            $('#ServiceModal').modal();
-
-        }
         function deleteService(id) {
             debugger;
             var request = $.ajax({
@@ -69,12 +51,18 @@
                 data: { id: id }
             });
 
-            request.done(function (msg) {
+            request.done(function (response) {
+                if (response.success) {
+                    openShowSuccessModal(response.message)
+                }
+                else {
+                    openShowErrorModal(response.message)
+                }
             });
-
-            request.fail(function (jqXHR, textStatus) {
+            request.fail(function (response) {
+                openShowErrorModal(response.message)
             });
-    }
+        }
     </script>
 }
 
