--- a/UskudarDenetim.UI/Views/Home/Index.cshtml
+++ b/UskudarDenetim.UI/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
 @Html.Action("_PracticalInformations", "PracticalInformations")
 
 
-@Html.Action("AllEmployee", "Admin")
+@Html.Action("AllEmployee", "TeamMember")
 <div class="dt-sc-margin100" style="margin-top:140px;"></div>
 @Html.Partial("_ReachUS", new UskudarDenetim.UI.Models.ModelContact())
 <div class="dt-sc-margin100"></div>
