--- a/UskudarDenetim.UI/Views/Service/Services.cshtml
+++ b/UskudarDenetim.UI/Views/Service/Services.cshtml
@@ -54,6 +54,7 @@
             request.done(function (response) {
                 if (response.success) {
                     openShowSuccessModal(response.message)
+                    location.reload();
                 }
                 else {
                     openShowErrorModal(response.message)
