--- a/UskudarDenetim.UI/Views/Shared/_AdminHeader.cshtml
+++ b/UskudarDenetim.UI/Views/Shared/_AdminHeader.cshtml
@@ -21,7 +21,7 @@
                             <a class="dt-menu-expand">+</a>
                         </li>
                         <li class="menu-item-simple-parent mce_backcolor">
-                            <a href="@Url.Action("Employees","Admin")">Çalışanlar</a>
+                            <a href="@Url.Action("Employees","TeamMember")">Çalışanlar</a>
                             <a class="dt-menu-expand">+</a>
                         </li>
                         @*<li class="menu-item-simple-parent">
